--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -543,162 +543,162 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
     <script src="plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
     <!-- Page specific script -->
-    <script type="text/javascript">
-      $(function () {
+   <script type="text/javascript">
+  $(function () {
 
-        /* initialize the external events
-         -----------------------------------------------------------------*/
-        function ini_events(ele) {
-          ele.each(function () {
-
-            // create an Event Object (http://arshaw.com/fullcalendar/docs/event_data/Event_Object/)
-            // it doesn't need to have a start or end
-            var eventObject = {
-              title: $.trim($(this).text()) // use the element's text as the event title
-            };
-
-            // store the Event Object in the DOM element so we can get to it later
-            $(this).data('eventObject', eventObject);
-
-            // make the event draggable using jQuery UI
-            $(this).draggable({
-              zIndex: 1070,
-              revert: true, // will cause the event to go back to its
-              revertDuration: 0  //  original position after the drag
-            });
-
-          });
-        }
-        ini_events($('#external-events div.external-event'));
-
-        /* initialize the calendar
-         -----------------------------------------------------------------*/
-        //Date for the calendar events (dummy data)
-        var date = new Date();
-        var d = date.getDate(),
-                m = date.getMonth(),
-                y = date.getFullYear();
-        $('#calendar').fullCalendar({
-          header: {
-            left: 'prev,next today',
-            center: 'title',
-            right: 'month,agendaWeek,agendaDay'
-          },
-          buttonText: {
-            today: 'today',
-            month: 'month',
-            week: 'week',
-            day: 'day'
-          },
-          //Random default events
-          events: [
-            {
-              title: 'All Day Event',
-              start: new Date(y, m, 1),
-              backgroundColor: "#f56954", //red
-              borderColor: "#f56954" //red
-            },
-            {
-              title: 'Long Event',
-              start: new Date(y, m, d - 5),
-              end: new Date(y, m, d - 2),
-              backgroundColor: "#f39c12", //yellow
-              borderColor: "#f39c12" //yellow
-            },
-            {
-              title: 'Meeting',
-              start: new Date(y, m, d, 10, 30),
-              allDay: false,
-              backgroundColor: "#0073b7", //Blue
-              borderColor: "#0073b7" //Blue
-            },
-            {
-              title: 'Lunch',
-              start: new Date(y, m, d, 12, 0),
-              end: new Date(y, m, d, 14, 0),
-              allDay: false,
-              backgroundColor: "#00c0ef", //Info (aqua)
-              borderColor: "#00c0ef" //Info (aqua)
-            },
-            {
-              title: 'Birthday Party',
-              start: new Date(y, m, d + 1, 19, 0),
-              end: new Date(y, m, d + 1, 22, 30),
-              allDay: false,
-              backgroundColor: "#00a65a", //Success (green)
-              borderColor: "#00a65a" //Success (green)
-            },
-            {
-              title: 'Click for Google',
-              start: new Date(y, m, 28),
-              end: new Date(y, m, 29),
-              url: 'http://google.com/',
-              backgroundColor: "#3c8dbc", //Primary (light-blue)
-              borderColor: "#3c8dbc" //Primary (light-blue)
-            }
-          ],
-          editable: true,
-          droppable: true, // this allows things to be dropped onto the calendar !!!
-          drop: function (date, allDay) { // this function is called when something is dropped
-
-            // retrieve the dropped element's stored Event Object
-            var originalEventObject = $(this).data('eventObject');
-
-            // we need to copy it, so that multiple events don't have a reference to the same object
-            var copiedEventObject = $.extend({}, originalEventObject);
-
-            // assign it the date that was reported
-            copiedEventObject.start = date;
-            copiedEventObject.allDay = allDay;
-            copiedEventObject.backgroundColor = $(this).css("background-color");
-            copiedEventObject.borderColor = $(this).css("border-color");
-
-            // render the event on the calendar
-            // the last `true` argument determines if the event "sticks" (http://arshaw.com/fullcalendar/docs/event_rendering/renderEvent/)
-            $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-
-            // is the "remove after drop" checkbox checked?
-            if ($('#drop-remove').is(':checked')) {
-              // if so, remove the element from the "Draggable Events" list
-              $(this).remove();
-            }
-
-          }
-        });
-
-        /* ADDING EVENTS */
-        var currColor = "#3c8dbc"; //Red by default
-        //Color chooser button
-        var colorChooser = $("#color-chooser-btn");
-        $("#color-chooser > li > a").click(function (e) {
-          e.preventDefault();
-          //Save color
-          currColor = $(this).css("color");
-          //Add color effect to button
-          $('#add-new-event').css({"background-color": currColor, "border-color": currColor});
-        });
-        $("#add-new-event").click(function (e) {
-          e.preventDefault();
-          //Get value and make sure it is not null
-          var val = $("#new-event").val();
-          if (val.length == 0) {
-            return;
-          }
-
-          //Create events
-          var event = $("<div />");
-          event.css({"background-color": currColor, "border-color": currColor, "color": "#fff"}).addClass("external-event");
-          event.html(val);
-          $('#external-events').prepend(event);
-
-          //Add draggable funtionality
-          ini_events(event);
-
-          //Remove event from text input
-          $("#new-event").val("");
+    // Inicializar os eventos externos
+    function ini_events(ele) {
+      ele.each(function () {
+        var eventObject = {
+          title: $.trim($(this).text())
+        };
+        $(this).data('eventObject', eventObject);
+        $(this).draggable({
+          zIndex: 1070,
+          revert: true,
+          revertDuration: 0
         });
       });
-    </script>
+    }
+    ini_events($('#external-events div.external-event'));
+
+    // Inicializar o calendário
+    $('#calendar').fullCalendar({
+      header: {
+        left: 'prev,next today',
+        center: 'title',
+        right: 'month,agendaWeek,agendaDay'
+      },
+      editable: true,
+      droppable: true,
+
+      // Carregar eventos do banco via AJAX
+      events: function(start, end, timezone, callback) {
+        $.ajax({
+          url: 'calendar_api.php',
+          type: 'GET',
+          success: function(data) {
+            callback(data); // Envia eventos para o calendário
+          }
+        });
+      },
+
+      // Adicionar evento ao soltar um item
+      drop: function(date, allDay) {
+        var originalEventObject = $(this).data('eventObject');
+        var copiedEventObject = $.extend({}, originalEventObject);
+
+        copiedEventObject.start = date.format();
+        copiedEventObject.allDay = allDay;
+        copiedEventObject.backgroundColor = $(this).css("background-color");
+        copiedEventObject.borderColor = $(this).css("border-color");
+
+        // Salvar novo evento no banco
+        $.ajax({
+          url: 'calendar_api.php',
+          type: 'POST',
+          data: JSON.stringify(copiedEventObject),
+          contentType: 'application/json',
+          success: function(response) {
+            copiedEventObject.id = response.id;
+            $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
+          }
+        });
+
+        if ($('#drop-remove').is(':checked')) {
+          $(this).remove();
+        }
+      },
+
+      // Adicionar evento via clique
+      eventClick: function(event, jsEvent, view) {
+        // Opções de edição aqui
+        var title = prompt('Edit event title:', event.title);
+        if (title) {
+          event.title = title;
+          $.ajax({
+            url: 'calendar_api.php',
+            type: 'PUT',
+            data: JSON.stringify({
+              id: event.id,
+              title: title,
+              start: event.start.format(),
+              end: event.end ? event.end.format() : null,
+              allDay: event.allDay,
+              backgroundColor: event.backgroundColor,
+              borderColor: event.borderColor
+            }),
+            contentType: 'application/json',
+            success: function() {
+              $('#calendar').fullCalendar('updateEvent', event);
+            }
+          });
+        }
+      },
+
+      // Função para deletar evento
+      eventDrop: function(event, delta, revertFunc) {
+        $.ajax({
+          url: 'calendar_api.php',
+          type: 'PUT',
+          data: JSON.stringify({
+            id: event.id,
+            start: event.start.format(),
+            end: event.end ? event.end.format() : null,
+            allDay: event.allDay
+          }),
+          contentType: 'application/json',
+          error: function() {
+            revertFunc();
+          }
+        });
+      },
+
+      // Função para deletar evento com botão direito
+      eventRender: function(event, element) {
+        element.bind('dblclick', function() {
+          if (confirm("Deseja excluir este evento?")) {
+            $.ajax({
+              url: 'calendar_api.php',
+              type: 'DELETE',
+              data: JSON.stringify({ id: event.id }),
+              contentType: 'application/json',
+              success: function() {
+                $('#calendar').fullCalendar('removeEvents', event.id);
+              }
+            });
+          }
+        });
+      }
+    });
+
+    // Adicionar novos eventos externos
+    var currColor = "#3c8dbc";
+    var colorChooser = $("#color-chooser-btn");
+    $("#color-chooser > li > a").click(function (e) {
+      e.preventDefault();
+      currColor = $(this).css("color");
+      $('#add-new-event').css({ "background-color": currColor, "border-color": currColor });
+    });
+
+    $("#add-new-event").click(function (e) {
+      e.preventDefault();
+      var val = $("#new-event").val();
+      if (val.length == 0) {
+        return;
+      }
+
+      var event = $("<div />");
+      event.css({ "background-color": currColor, "border-color": currColor, "color": "#fff" }).addClass("external-event");
+      event.html(val);
+      $('#external-events').prepend(event);
+
+      ini_events(event);
+      $("#new-event").val("");
+    });
+  });
+</script>
+
 
   </body>
 </html>
