--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -18,17 +18,32 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins 
          folder instead of downloading all of them to reduce the load. -->
     <link href="dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body class="skin-blue">
     <div class="wrapper">
+
+      <!-- Right side column. Contains the navbar and content of the page -->
       <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
             Calendar
             <small>Control panel</small>
           </h1>
+          <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li class="active">Calendar</li>
+          </ol>
         </section>
 
+        <!-- Main content -->
         <section class="content">
           <div class="row">
             <div class="col-md-3">
@@ -37,6 +52,7 @@
                   <h4 class="box-title">Draggable Events</h4>
                 </div>
                 <div class="box-body">
+                  <!-- the events -->
                   <div id='external-events'>
                     <div class='external-event bg-green'>Lunch</div>
                     <div class='external-event bg-yellow'>Go home</div>
@@ -52,10 +68,42 @@
                   </div>
                 </div><!-- /.box-body -->
               </div><!-- /. box -->
+              <div class="box box-solid">
+                <div class="box-header with-border">
+                  <h3 class="box-title">Create Event</h3>
+                </div>
+                <div class="box-body">
+                  <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
+                    <!--<button type="button" id="color-chooser-btn" class="btn btn-info btn-block dropdown-toggle" data-toggle="dropdown">Color <span class="caret"></span></button>-->
+                    <ul class="fc-color-picker" id="color-chooser">
+                      <li><a class="text-aqua" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-blue" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-light-blue" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-teal" href="#"><i class="fa fa-square"></i></a></li>																						
+                      <li><a class="text-yellow" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-orange" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-green" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-lime" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-red" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-purple" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-fuchsia" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-muted" href="#"><i class="fa fa-square"></i></a></li>
+                      <li><a class="text-navy" href="#"><i class="fa fa-square"></i></a></li>
+                    </ul>
+                  </div><!-- /btn-group -->
+                  <div class="input-group">
+                    <input id="new-event" type="text" class="form-control" placeholder="Event Title">
+                    <div class="input-group-btn">
+                      <button id="add-new-event" type="button" class="btn btn-primary btn-flat">Add</button>
+                    </div><!-- /btn-group -->
+                  </div><!-- /input-group -->
+                </div>
+              </div>
             </div><!-- /.col -->
             <div class="col-md-9">
               <div class="box box-primary">
                 <div class="box-body no-padding">
+                  <!-- THE CALENDAR -->
                   <div id="calendar"></div>
                 </div><!-- /.box-body -->
               </div><!-- /. box -->
@@ -63,7 +111,6 @@
           </div><!-- /.row -->
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
-
       <footer class="main-footer">
         <div class="pull-right hidden-xs">
           <b>Version</b> 2.0
@@ -72,170 +119,111 @@
       </footer>
     </div><!-- ./wrapper -->
 
+    <!-- jQuery 2.1.3 -->
     <script src="plugins/jQuery/jQuery-2.1.3.min.js"></script>
+    <!-- Bootstrap 3.3.2 JS -->
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- jQuery UI 1.11.1 -->
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.min.js" type="text/javascript"></script>
+    <!-- Slimscroll -->
     <script src="plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-    <script src="plugins/fastclick/fastclick.min.js"></script>
+    <!-- FastClick -->
+    <script src='plugins/fastclick/fastclick.min.js'></script>
+    <!-- AdminLTE App -->
     <script src="dist/js/app.min.js" type="text/javascript"></script>
+    <!-- AdminLTE for demo purposes -->
     <script src="dist/js/demo.js" type="text/javascript"></script>
+    <!-- fullCalendar 2.2.5 -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
     <script src="plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
-
+    <!-- Page specific script -->
     <script type="text/javascript">
-      $(function () {
+    $(function () {
 
-        // Inicializar os eventos externos
-        function ini_events(ele) {
-          ele.each(function () {
-            var eventObject = {
-              title: $.trim($(this).text())
-            };
-            $(this).data('eventObject', eventObject);
-            $(this).draggable({
-              zIndex: 1070,
-              revert: true,
-              revertDuration: 0
-            });
+      // Inicializar os eventos externos
+      function ini_events(ele) {
+        ele.each(function () {
+          var eventObject = {
+            title: $.trim($(this).text())
+          };
+          $(this).data('eventObject', eventObject);
+          $(this).draggable({
+            zIndex: 1070,
+            revert: true,
+            revertDuration: 0
           });
+        });
+      }
+      ini_events($('#external-events div.external-event'));
+
+      // Inicializar o calendário
+      $('#calendar').fullCalendar({
+        header: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'month,agendaWeek,agendaDay'
+        },
+        editable: true,
+        droppable: true,
+
+        // Carregar eventos do banco via AJAX
+        events: function(start, end, timezone, callback) {
+          $.ajax({
+            url: 'calendar_api.php',
+            type: 'GET',
+            success: function(data) {
+              callback(data); // Envia eventos para o calendário
+            }
+          });
+        },
+
+        // Adicionar evento ao soltar um item
+        drop: function(date, allDay) {
+          var originalEventObject = $(this).data('eventObject');
+          var copiedEventObject = {
+            title: originalEventObject.title,
+            start: date.format(),
+            allDay: allDay,
+            backgroundColor: $(this).css("background-color"),
+            borderColor: $(this).css("border-color")
+          };
+
+          // Enviar evento para o banco via AJAX
+          $.ajax({
+            url: 'calendar_api.php',
+            type: 'POST',
+            data: JSON.stringify({
+              title: copiedEventObject.title,
+              start: copiedEventObject.start,
+              allDay: copiedEventObject.allDay,
+              backgroundColor: copiedEventObject.backgroundColor,
+              borderColor: copiedEventObject.borderColor
+            }),
+            contentType: 'application/json',
+            success: function(response) {
+              copiedEventObject.id = response.id;
+              $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
+            }
+          });
+
+          // Remover o evento se necessário
+          if ($('#drop-remove').is(':checked')) {
+            $(this).remove();
+          }
         }
-        ini_events($('#external-events div.external-event'));
-
-        // Inicializar o calendário
-        $('#calendar').fullCalendar({
-          header: {
-            left: 'prev,next today',
-            center: 'title',
-            right: 'month,agendaWeek,agendaDay'
-          },
-          editable: true,
-          droppable: true,
-
-          // Carregar eventos do banco via AJAX
-          events: function(start, end, timezone, callback) {
-            $.ajax({
-              url: 'calendar_api.php',
-              type: 'GET',
-              success: function(data) {
-                callback(data); // Envia eventos para o calendário
-              }
-            });
-          },
-
-          // Adicionar evento ao soltar um item
-          drop: function(date, allDay) {
-            var originalEventObject = $(this).data('eventObject');
-            var copiedEventObject = {
-              title: originalEventObject.title,
-              start: date.format(),
-              allDay: allDay,
-              backgroundColor: $(this).css("background-color"),
-              borderColor: $(this).css("border-color")
-            };
-
-            // Salvar novo evento no banco
-            $.ajax({
-              url: 'calendar_api.php',
-              type: 'POST',
-              data: JSON.stringify(copiedEventObject),
-              contentType: 'application/json',
-              success: function(response) {
-                copiedEventObject.id = response.id;
-                $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-              }
-            });
-
-            if ($('#drop-remove').is(':checked')) {
-              $(this).remove();
-            }
-          },
-
-          // Adicionar evento via clique
-          eventClick: function(event, jsEvent, view) {
-            var title = prompt('Edit event title:', event.title);
-            if (title) {
-              event.title = title;
-              $.ajax({
-                url: 'calendar_api.php',
-                type: 'PUT',
-                data: JSON.stringify({
-                  id: event.id,
-                  title: title,
-                  start: event.start.format(),
-                  end: event.end ? event.end.format() : null,
-                  allDay: event.allDay,
-                  backgroundColor: event.backgroundColor,
-                  borderColor: event.borderColor
-                }),
-                contentType: 'application/json',
-                success: function() {
-                  $('#calendar').fullCalendar('updateEvent', event);
-                }
-              });
-            }
-          },
-
-          // Função para deletar evento
-          eventDrop: function(event, delta, revertFunc) {
-            $.ajax({
-              url: 'calendar_api.php',
-              type: 'PUT',
-              data: JSON.stringify({
-                id: event.id,
-                start: event.start.format(),
-                end: event.end ? event.end.format() : null,
-                allDay: event.allDay
-              }),
-              contentType: 'application/json',
-              error: function() {
-                revertFunc();
-              }
-            });
-          },
-
-          // Função para deletar evento com botão direito
-          eventRender: function(event, element) {
-            element.bind('dblclick', function() {
-              if (confirm("Deseja excluir este evento?")) {
-                $.ajax({
-                  url: 'calendar_api.php',
-                  type: 'DELETE',
-                  data: JSON.stringify({ id: event.id }),
-                  contentType: 'application/json',
-                  success: function() {
-                    $('#calendar').fullCalendar('removeEvents', event.id);
-                  }
-                });
-              }
-            });
-          }
-        });
-
-        // Adicionar novos eventos externos
-        var currColor = "#3c8dbc";
-        var colorChooser = $("#color-chooser-btn");
-        $("#color-chooser > li > a").click(function (e) {
-          e.preventDefault();
-          currColor = $(this).css("color");
-          $('#add-new-event').css({ "background-color": currColor, "border-color": currColor });
-        });
-
-        $("#add-new-event").click(function (e) {
-          e.preventDefault();
-          var val = $("#new-event").val();
-          if (val.length == 0) {
-            return;
-          }
-
-          var event = $("<div />");
-          event.css({ "background-color": currColor, "border-color": currColor, "color": "#fff" }).addClass("external-event");
-          event.html(val);
-          $('#external-events').prepend(event);
-
-          ini_events(event);
-          $("#new-event").val("");
-        });
       });
+
+      // Adicionar um novo evento ao clicar
+      $('#add-new-event').click(function() {
+        var val = $('#new-event').val();
+        if (val) {
+          var event = $('<div />').text(val).addClass('external-event').css("background-color", $("#color-chooser-btn").css("background-color"));
+          $('#external-events').prepend(event);
+          ini_events(event);
+          $('#new-event').val('');
+        }
+      });
+    });
     </script>
   </body>
 </html>
