--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -15,23 +15,14 @@
     <link href="plugins/fullcalendar/fullcalendar.print.css" rel="stylesheet" type="text/css" media='print' />
     <!-- Theme style -->
     <link href="dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
-    <!-- AdminLTE Skins. Choose a skin from the css/skins 
-         folder instead of downloading all of them to reduce the load. -->
+    <!-- AdminLTE Skins -->
     <link href="dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body class="skin-blue">
     <div class="wrapper">
-
       <!-- Right side column. Contains the navbar and content of the page -->
       <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
+        <!-- Content Header -->
         <section class="content-header">
           <h1>
             Calendar
@@ -74,12 +65,11 @@
                 </div>
                 <div class="box-body">
                   <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
-                    <!--<button type="button" id="color-chooser-btn" class="btn btn-info btn-block dropdown-toggle" data-toggle="dropdown">Color <span class="caret"></span></button>-->
                     <ul class="fc-color-picker" id="color-chooser">
                       <li><a class="text-aqua" href="#"><i class="fa fa-square"></i></a></li>
                       <li><a class="text-blue" href="#"><i class="fa fa-square"></i></a></li>
                       <li><a class="text-light-blue" href="#"><i class="fa fa-square"></i></a></li>
-                      <li><a class="text-teal" href="#"><i class="fa fa-square"></i></a></li>																						
+                      <li><a class="text-teal" href="#"><i class="fa fa-square"></i></a></li>   
                       <li><a class="text-yellow" href="#"><i class="fa fa-square"></i></a></li>
                       <li><a class="text-orange" href="#"><i class="fa fa-square"></i></a></li>
                       <li><a class="text-green" href="#"><i class="fa fa-square"></i></a></li>
@@ -136,94 +126,119 @@
     <!-- fullCalendar 2.2.5 -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
     <script src="plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
+
     <!-- Page specific script -->
     <script type="text/javascript">
-    $(function () {
-
-      // Inicializar os eventos externos
-      function ini_events(ele) {
-        ele.each(function () {
-          var eventObject = {
-            title: $.trim($(this).text())
-          };
-          $(this).data('eventObject', eventObject);
-          $(this).draggable({
-            zIndex: 1070,
-            revert: true,
-            revertDuration: 0
+      $(function () {
+        // Inicializar os eventos externos
+        function ini_events(ele) {
+          ele.each(function () {
+            var eventObject = {
+              title: $.trim($(this).text()) // Obtem o título do evento
+            };
+            $(this).data('eventObject', eventObject);
+            $(this).draggable({
+              zIndex: 1070,
+              revert: true,      // Quando o evento não for solto, ele retorna à posição original
+              revertDuration: 0  // Não há demora
+            });
           });
-        });
-      }
-      ini_events($('#external-events div.external-event'));
+        }
+        ini_events($('#external-events div.external-event'));
 
-      // Inicializar o calendário
-      $('#calendar').fullCalendar({
-        header: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'month,agendaWeek,agendaDay'
-        },
-        editable: true,
-        droppable: true,
+        // Inicializar o calendário
+        $('#calendar').fullCalendar({
+          header: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'month,agendaWeek,agendaDay'
+          },
+          editable: true,
+          droppable: true,
 
-        // Carregar eventos do banco via AJAX
-        events: function(start, end, timezone, callback) {
-          $.ajax({
-            url: 'calendar_api.php',
-            type: 'GET',
-            success: function(data) {
-              callback(data); // Envia eventos para o calendário
-            }
-          });
-        },
+          // Carregar eventos do banco via AJAX
+          events: function(start, end, timezone, callback) {
+            $.ajax({
+              url: 'calendar_api.php',
+              type: 'GET',
+              success: function(data) {
+                callback(data); // Envia eventos para o calendário
+              }
+            });
+          },
 
-        // Adicionar evento ao soltar um item
-        drop: function(date, allDay) {
-          var originalEventObject = $(this).data('eventObject');
-          var copiedEventObject = {
-            title: originalEventObject.title,
-            start: date.format(),
-            allDay: allDay,
-            backgroundColor: $(this).css("background-color"),
-            borderColor: $(this).css("border-color")
-          };
+          // Adicionar evento ao soltar um item
+          drop: function(date, allDay) {
+            var originalEventObject = $(this).data('eventObject');
+            var copiedEventObject = {
+              title: originalEventObject.title,
+              start: date.format(),
+              allDay: allDay,
+              backgroundColor: $(this).css("background-color"),
+              borderColor: $(this).css("border-color")
+            };
 
-          // Enviar evento para o banco via AJAX
-          $.ajax({
-            url: 'calendar_api.php',
-            type: 'POST',
-            data: JSON.stringify({
-              title: copiedEventObject.title,
-              start: copiedEventObject.start,
-              allDay: copiedEventObject.allDay,
-              backgroundColor: copiedEventObject.backgroundColor,
-              borderColor: copiedEventObject.borderColor
-            }),
-            contentType: 'application/json',
-            success: function(response) {
-              copiedEventObject.id = response.id;
-              $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-            }
-          });
+            // Enviar evento para o banco via AJAX
+            $.ajax({
+              url: 'calendar_api.php',
+              type: 'POST',
+              data: JSON.stringify({
+                title: copiedEventObject.title,
+                start: copiedEventObject.start,
+                allDay: copiedEventObject.allDay,
+                backgroundColor: copiedEventObject.backgroundColor,
+                borderColor: copiedEventObject.borderColor
+              }),
+              contentType: 'application/json',
+              success: function(response) {
+                copiedEventObject.id = response.id;
+                $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
+              }
+            });
+          },
 
-          // Remover o evento se necessário
-          if ($('#drop-remove').is(':checked')) {
-            $(this).remove();
+          // Atualizar evento quando ele for arrastado
+          eventDrop: function(event, delta, revertFunc) {
+            $.ajax({
+              url: 'calendar_api.php',
+              type: 'POST',
+              data: JSON.stringify({
+                id: event.id,
+                title: event.title,
+                start: event.start.format(),
+                end: event.end ? event.end.format() : null, // Caso haja uma data de término
+                allDay: event.allDay,
+                backgroundColor: event.backgroundColor,
+                borderColor: event.borderColor
+              }),
+              contentType: 'application/json',
+              success: function(response) {
+                console.log("Evento atualizado com sucesso.");
+              },
+              error: function(xhr, status, error) {
+                revertFunc();
+                alert("Erro ao atualizar o evento.");
+              }
+            });
           }
-        }
-      });
+        });
 
-      // Adicionar um novo evento ao clicar
-      $('#add-new-event').click(function() {
-        var val = $('#new-event').val();
-        if (val) {
-          var event = $('<div />').text(val).addClass('external-event').css("background-color", $("#color-chooser-btn").css("background-color"));
+        // Adicionar evento do painel lateral
+        $('#add-new-event').click(function() {
+          var title = $('#new-event').val();
+          var color = $('#color-chooser li a').css('color');
+          if (title.length == 0) return;
+
+          var event = $('<div />');
+          event.text(title);
+          event.css('background-color', color);
           $('#external-events').prepend(event);
+
           ini_events(event);
+
           $('#new-event').val('');
-        }
+        });
       });
-    });
     </script>
   </body>
 </html>
