--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -143,7 +143,7 @@
                         contentType: 'application/json',
                         success: function(response) {
                             console.log("Evento atualizado com sucesso.");
-                            console.log("Evento atualizado com sucesso. Atualização");
+                            console.log("Evento atualizado com sucesso. Atualização "+event.end);
                         },
                         error: function(xhr, status, error) {
                             revertFunc();
