--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -97,36 +97,33 @@
                         }
                     });
                 },
-                drop: function(date, allDay) {
-                    var originalEventObject = $(this).data('eventObject');
-                    var copiedEventObject = {
-                        title: originalEventObject.title,
-                        start: date.format(),
-                        allDay: allDay,
-                        backgroundColor: $(this).css("background-color"),
-                        borderColor: $(this).css("border-color")
-                    };
+drop: function(date, allDay) {
+    var originalEventObject = $(this).data('eventObject');
+    var copiedEventObject = {
+        title: originalEventObject.title,
+        start: date.format(),
+        end: allDay ? date.add(1, 'days').format() : date.add(3, 'hours').format(), // Para eventos de um dia, adiciona um dia ao 'end'
+        allDay: allDay,
+        backgroundColor: $(this).css("background-color"),
+        borderColor: $(this).css("border-color")
+    };
 
-                    $.ajax({
-                        url: 'calendar_api.php',
-                        type: 'POST',
-                        data: JSON.stringify({
-                            title: copiedEventObject.title,
-                            start: copiedEventObject.start,
-                            allDay: copiedEventObject.allDay,
-                            backgroundColor: copiedEventObject.backgroundColor,
-                            borderColor: copiedEventObject.borderColor
-                        }),
-                        contentType: 'application/json',
-                        success: function(response) {
-                            copiedEventObject.id = response.id;
-                            $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-                        },
-                        error: function(xhr, status, error) {
-                            alert("Erro ao adicionar evento.");
-                        }
-                    });
-                },
+    console.log("Evento copiado:", copiedEventObject);
+
+    $.ajax({
+        url: 'calendar_api.php',
+        type: 'POST',
+        data: JSON.stringify(copiedEventObject),
+        contentType: 'application/json',
+        success: function(response) {
+            copiedEventObject.id = response.id;
+            $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
+        },
+        error: function(xhr, status, error) {
+            alert("Erro ao adicionar evento.");
+        }
+    });
+},
                 eventDrop: function(event, delta, revertFunc) {
                     $.ajax({
                         url: 'calendar_api.php',
