--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -159,7 +159,7 @@
                         }),
                         contentType: 'application/json',
                         success: function(response) {
-                            console.log("Evento atualizado com sucesso.");
+                            console.log("Evento atualizado com sucesso. end "+event.end);
                         },
                         error: function(xhr, status, error) {
                             revertFunc();
