--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -168,7 +168,7 @@
                     }),
                     contentType: 'application/json',
                     success: function(response) {
-                        console.log("Evento atualizado com sucesso.");
+                        console.log("Evento atualizado com sucesso. "+event.end.format());
                     },
                     error: function(xhr, status, error) {
                         revertFunc();
