--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -102,6 +102,7 @@
                                 event.end = moment(event.end).format('YYYY-MM-DDTHH:mm:ss');  // Ajuste para o formato esperado
                                 console.log("Evento end. "+event.end);
                             }
+                             console.log("Eventos formatados: ", events);
                             return event;
                         });
                         callback(events);
