--- a/admin/calendario.html
+++ b/admin/calendario.html
@@ -104,7 +104,7 @@
                             }
                             return event;
                         });
-                        console.log("Eventos formatados: ", events);
+                        console.log("Evento allDay: " + event.allDay);
                         callback(events);
                     }
                 });
