--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -27,15 +27,16 @@
         .navbar a {
             color: white;
             text-decoration: none;
-            text-align: center;
+            display: flex;
+            align-items: center;
             font-size: 18px;
         }
 
         /* Cor dos ícones */
         .navbar a i {
             color: red;
-            font-size: 30px;
-            margin-bottom: 5px;
+            font-size: 20px; /* ícones menores */
+            margin-right: 10px; /* espaço entre o ícone e o texto */
         }
 
         /* Efeito hover nos links */
@@ -58,35 +59,35 @@
     <div class="navbar">
         <a href="#" onclick="loadIframe('https://www.example.com');">
             <i class="fas fa-home"></i>
-            <br>Home
+            Home
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/about');">
             <i class="fas fa-info-circle"></i>
-            <br>About
+            About
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/services');">
             <i class="fas fa-cogs"></i>
-            <br>Services
+            Services
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/contact');">
             <i class="fas fa-phone-alt"></i>
-            <br>Contact
+            Contact
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/blog');">
             <i class="fas fa-blog"></i>
-            <br>Blog
+            Blog
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/portfolio');">
             <i class="fas fa-briefcase"></i>
-            <br>Portfolio
+            Portfolio
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/testimonials');">
             <i class="fas fa-comments"></i>
-            <br>Testimonials
+            Testimonials
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/faqs');">
             <i class="fas fa-question-circle"></i>
-            <br>FAQs
+            FAQs
         </a>
     </div>
 
